--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
-        run: cd docs && julia make.jl
+          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+        run: echo "$DEPLOY_KEY" >> ~/.ssh/known_hosts && cd docs && julia make.jl
