--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
-        run: echo "$DEPLOY_KEY" >> ~/.ssh/known_hosts && cd docs && julia make.jl
+        run: mkdir ~/.ssh && touch ~/.ssh/known_hosts && echo "$DEPLOY_KEY" >> ~/.ssh/known_hosts && cd docs && julia make.jl
