--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,7 @@
+name = "NeuralVerifier"
+author = ["Jay Morgan"]
+version = "0.1.0"
+
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
